objects/icBase__Development_Requirement__c.object
<CustomObject>
    <description>Development requirements</description>
    <fields>
        <fullName>icBase__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>icBase__Project__c</fullName>
        <label>Project</label>
        <referenceTo>icBase__Project2__c</referenceTo>
        <relationshipName>Development_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>icBase__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified (END)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Force.com Requirement</label>
    <listViews>
        <fullName>icBase__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requirement Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Force.com Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>